Support setting a trip vibe
